--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,9 +30,8 @@ collections:
     create: true
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Featured Image", name: "featuredImage", widget: "image" }
       - { label: "Paragraph1", name: "paraOne", widget: "string" }
-      - { label: "Paragraph2", name: "paraTwo", widget: "string" }
+      - { label: "Paragraph2", name: "paraTwo", widget: "string", optional: true }
   - name: "products"
     label: "Products"
     folder: "products"
