--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,43 +2,48 @@ backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
 
-media_folder: "static/uploads"
-public_folder: "uploads"
+media_folder: 'static/uploads'
+public_folder: '/uploads'
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "blog" # The path to the folder where the documents are stored
+  - name: 'blog' # Used in routes, e.g., /admin/collections/blog
+    label: 'Blog' # Used in the UI
+    folder: 'blog' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: '{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Featured Image", name: "featuredImage", widget: "image" }
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Featured Image', name: 'featuredImage', widget: 'image' }
       - {
-          label: "date",
+          label: 'date',
           name: date",
-          widget: "date",
-          default: "",
-          format: "MMM DD, YYYY",
+          widget: 'date',
+          default: '',
+          format: 'MMM DD, YYYY',
         }
-      - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Preview", name: "preview", widget: "markdown" }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - { label: 'Preview', name: 'preview', widget: 'markdown' }
     # fields used in home page
-  - name: "home"
-    label: "Home"
-    folder: "home"
+  - name: 'home'
+    label: 'Home'
+    folder: 'home'
     create: true
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Paragraph1", name: "paraOne", widget: "string" }
-      - { label: "Paragraph2", name: "paraTwo", widget: "string", optional: true }
-  - name: "products"
-    label: "Products"
-    folder: "products"
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Paragraph1', name: 'paraOne', widget: 'string' }
+      - {
+          label: 'Paragraph2',
+          name: 'paraTwo',
+          widget: 'string',
+          optional: true,
+        }
+  - name: 'products'
+    label: 'Products'
+    folder: 'products'
     create: true
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Featured Image", name: "featuredImage", widget: "image" }
-      - { label: "Description", name: "description", widget: "string" }
-      - { label: "Price", name: "price", widget: "string" }
-      - { label: "Code", name: "code", widget: "string" }
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Featured Image', name: 'featuredImage', widget: 'image' }
+      - { label: 'Description', name: 'description', widget: 'string' }
+      - { label: 'Price', name: 'price', widget: 'string' }
+      - { label: 'Code', name: 'code', widget: 'string' }
